--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,17 @@
         "iterator": "cpp",
         "string_view": "cpp",
         "scoped_allocator": "cpp",
-        "regex": "cpp"
+        "regex": "cpp",
+        "*.tcc": "cpp",
+        "optional": "cpp",
+        "istream": "cpp",
+        "ostream": "cpp",
+        "ratio": "cpp",
+        "system_error": "cpp",
+        "functional": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp",
+        "utility": "cpp",
+        "sstream": "cpp"
     }
 }
